# PromptSensitivityFI

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  tasks.ps1
data/: sample_v1.json
prompt_sensitivity/: __init__.py  config.py  logging_setup.py
prompt_sensitivity/data/: __init__.py  load_2wiki.py  load_hotpotqa.py  sample_questions.py  schemas.py
prompt_sensitivity/ladders/: __init__.py  bit_cost.py  distractor_first_ladder.py  gold_first_ladder.py  random_ladder.py  schemas.py
prompt_sensitivity/metrics/: __init__.py  errica.py  ess_in.py  fi_in.py  fi_out.py  h_sem.py  orchestrator.py  posix.py  rho_u.py  schemas.py  spread.py  variation_ratio.py
prompt_sensitivity/models/: __init__.py  cache.py  embedding.py  rate_limiter.py  registry.py  schemas.py
prompt_sensitivity/paraphrases/: __init__.py  constraint_filter.py  deduplicate.py  generate.py  nli_filter.py  pipeline.py  prompts.py  schemas.py
prompt_sensitivity/prompts/: __init__.py
prompt_sensitivity/prompts/templates/: __init__.py  qa_prompt.py
prompt_sensitivity/scoring/: __init__.py  nli_with_gold.py
prompt_sensitivity/scripts/: __init__.py  api_check.py  build_ladders.py  compute_kappa.py  diagnose_paraphrases.py  download_datasets.py  e2e_smoke.py  export_annotation_sample.py  generate_paraphrases.py  list_models.py  plot_pilot.py  sample_questions.py  smoke_metrics.py
tests/: conftest.py  test_bit_cost.py  test_config.py  test_constraint_filter.py  test_data_schemas.py  test_deduplicate.py  test_errica.py  test_ess_in.py  test_fi_in.py  test_fi_out.py  test_h_sem_pure.py  test_kappa.py  test_ladders.py  test_models_cache.py  test_nli_filter.py  test_orchestrator.py  test_paraphrase_pipeline.py  test_paraphrase_prompts.py  test_posix.py  test_prompts.py  test_rate_limiter.py  test_rho_u.py  test_sample_questions.py  test_scoring.py  test_spread_and_variation.py
