[project]
name = "prompt-sensitivity"
version = "0.1.0"
description = "Functional Information for Prompts (FI_in) — KIT seminar, Thanos Drossos / Moritz Diener (sup.)"
authors = [{ name = "Thanos Drossos" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "pydantic>=2.7,<3.0",
  "pyyaml>=6.0",
  "loguru>=0.7",
  "python-dotenv>=1.0",
  "tenacity>=9.0",
  "numpy>=1.26,<3.0",
  "scipy>=1.13",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "datasets>=2.20",
  # OpenAI SDK is the chat-completions client for the LiteLLM gateway
  # (same protocol, just a different base_url). No direct OpenAI account needed.
  "openai>=1.50",
  "tqdm>=4.66",
  # Plotting for the pilot/supervisor demo (matplotlib + seaborn-lite usage).
  "matplotlib>=3.8",
  # NLI filter (Sprint 2) and metrics (Sprint 4) need these from day one.
  # Previously gated under `[metrics]` extras — moved to core because the
  # pipeline can't run without them and the optional-extras gate was a
  # foot-gun (`uv sync` without `--all-extras` left an unusable venv).
  "transformers>=4.44",
  "torch>=2.3",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
analysis = [
  "duckdb>=1.1",                   # used in Sprint 5+ for grid analytics
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_sensitivity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
  "needs_api: requires live API keys (Together / OpenAI); skipped without .env",
  "needs_gpu: requires CUDA / heavyweight transformer downloads",
]

[tool.ruff]
line-length = 100
target-version = "py311"
